--- a/src/assets/css/signIn.css
+++ b/src/assets/css/signIn.css
@@ -1,33 +1,12 @@
-body {
+/* body {
   height: 2000px;
-}
+} */
 
-.sign-in {
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20%;
-  border: 10px;
-}
-
-.binar-sign-in {
+.button-register {
   background-color: #0d28a6;
 }
 
-.binar-sign-in h1 {
-  font-family: "Rubik", sans-serif;
-  color: white;
-  position: absolute;
-  margin-top: 5%;
-  margin-left: 115px;
-  margin-right: 176px;
-}
-
-.desktop {
-  margin-top: 30%;
-  margin-left: 30%;
-}
-
-.button-register {
-  color: #0d28a6;
+.sign-in {
+  align-items: center;
+  align-content: center;
 }
