Sign Up & Sign In update
update style

--- a/src/assets/css/signIn.css
+++ b/src/assets/css/signIn.css
@@ -1,9 +1,15 @@
-/* body {
-  height: 2000px;
-} */
-
 .button-register {
   background-color: #0d28a6;
+  border: none;
+  width: 370px;
+  height: 36px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  color: white;
+  font-size: 14px;
+  font-weight: 700;
+
+  border-radius: 3px;
 }
 
 .sign-in {
@@ -20,4 +26,11 @@
   min-height: 100vh;
   display: flex;
   width: 938px;
+}
+
+.redirect a {
+  color: #0d28a6;
+}
+.redirect a:hover {
+  color: #0d28a6;
 }
