--- a/src/assets/css/payment.css
+++ b/src/assets/css/payment.css
@@ -41,3 +41,173 @@
   border: none;
   margin-top: 200px;
 }
+
+.state-payment {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  padding-right: 15px;
+  padding-top: 4px;
+}
+
+.state-payment .oneone {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
+  text-align: center;
+  color: #ffffff;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border: 1px solid #0d28a6;
+  background: #0d28a6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.state-payment .onetwo {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
+  text-align: center;
+  color: #000000;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border: 1px solid #0d28a6;
+  background: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.state-payment .onethree {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
+  text-align: center;
+  color: #000000;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border: 1px solid #0d28a6;
+  background: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.state-payment .twoone {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
+  text-align: center;
+  color: #ffffff;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border: 1px solid #0d28a6;
+  background: #0d28a6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.state-payment .twotwo {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
+  text-align: center;
+  color: #ffffff;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border: 1px solid #0d28a6;
+  background: #0d28a6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.state-payment .twothree {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
+  text-align: center;
+  color: #000000;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border: 1px solid #0d28a6;
+  background: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.state-payment .threeone {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
+  text-align: center;
+  color: #ffffff;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border: 1px solid #0d28a6;
+  background: #0d28a6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.state-payment .threetwo {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
+  text-align: center;
+  color: #ffffff;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border: 1px solid #0d28a6;
+  background: #0d28a6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.state-payment .threethree {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
+  text-align: center;
+  color: #ffffff;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border: 1px solid #0d28a6;
+  background: #0d28a6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
